2020-09-23  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* libbalsa/address-view.c (libbalsa_address_view_new): Set
	"activate-on-single-click" property to TRUE, instead of doing it
	the hard way.

2020-09-02  Peter Bloomfield  <pbloomfield@bellsouth.net>

	balsa-index: add a timeout to verify that the scrolled-to row is
	actually visible, and, if it isn't, to call scroll-to-row again

	* src/balsa-index.c
	  (bndx_scroll_to_row_verify_timeout): the timeout handler;
	  (bndx_scroll_to_row_idle): if the tree-view is realized,
	    schedule the timeout.

2020-08-24  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* libbalsa/libbalsa-gpgme-widgets.c
	(create_key_label_with_warn): the warning icon is (now?)
	"dialog-warning", not "gtk-dialog-warning".

2020-08-22  Peter Bloomfield  <pbloomfield@bellsouth.net>

	balsa-index: scroll to row in another idle handler

	* src/balsa-index.c
	  (bndx_scroll_to_row_idle): the handler;
	  (bndx_scroll_to_row): helper to schedule it;
	  (bndx_scroll_on_open_idle), (bndx_select_row), (bndx_ensure_visible_idle):
	    use the helper;
	  (bndx_destroy): remove the source, if necessary.

2020-08-21  Peter Bloomfield  <pbloomfield@bellsouth.net>

	balsa-index: Ensure visible in a low-priority idle callback

	* src/balsa-index.c (bndx_ensure_visible_idle): the callback;
	(balsa_index_ensure_visible): schedule it.

2020-08-20  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Fix some more mailbox-opening issues

	* libbalsa/mailbox.c (libbalsa_mailbox_get_has_sort_pending):
	  new function;
	* libbalsa/mailbox.h: declare it;
	* src/balsa-index.c (bndx_scroll_on_open_idle): use it;
	* src/main-window.c (bw_real_open_mbnode_idle_cb): show the
	  BalsaIndex widget here, instead of in the scroll-on-open idle
	  handler
	(balsa_window_next_unread): balsa_index_select_next_unread()
	  finds the next unread message even if it is hidden.

2020-08-17  Peter Bloomfield  <pbloomfield@bellsouth.net>

	balsa-message: Restore text copy
